--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "dns": "^0.2.2",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
+    "install": "^0.13.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.13",
+    "npm": "^10.8.3",
     "react": "18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.7.3",
+    "@types/react": "18.3.9"
   }
 }
