Verificar contraseña con hash desde servidor

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "dns": "^0.2.2",
     "eslint": "8.57.1",
