--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.9.0",
     "next": "14.2.13",
     "npm": "^10.8.3",
