Inicio de restablecimiento de  password
Envia un link al correo electronico que se ponga, falta de implementar el update de la nueva password

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGODB_URL=mongodb://localhost:27017/Users
 JWT_SECRET=NK05ZXgRo3Op3w
+
+EMAIL_USER=rocarealstate@outlook.com
+EMAIL_PASS=prueba2024
