--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "dns": "^0.2.2",
+    "dotenv": "^16.4.5",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
     "install": "^0.13.0",
@@ -19,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.9.0",
     "next": "14.2.13",
+    "nodemailer": "^6.9.15",
     "npm": "^10.8.3",
     "react": "18.3.1",
     "react-bootstrap": "^2.10.5",
