Arreglo de correo

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGODB_URL=mongodb://localhost:27017/Users
 JWT_SECRET=NK05ZXgRo3Op3w
 
-EMAIL_USER=rocarealstate@outlook.com
-EMAIL_PASS=prueba2024
+EMAIL_USER=rocarealstate94@gmail.com
+EMAIL_PASS=svvyxriiqkswnuie
+
