--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.13",
     "nodemailer": "^6.9.15",
     "npm": "^10.8.3",
