--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
+    "formidable": "^3.5.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
