--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.15",
     "npm": "^10.8.3",
     "react": "18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
